--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/dubliyu/Database_RetailSystem#readme",
   "private": "true",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "express": "^4.16.4",
+    "express-promise-router": "^3.0.3",
     "pg": "^7.9.0"
   },
   "devDependencies": {
