--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^3.0.5",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
+    "multer": "^1.4.1",
     "pg": "^7.9.0"
   },
   "devDependencies": {
