--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "private": "true",
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
     "multer": "^1.4.1",
